@@ -86,16 +86,39 @@ static LZFILE *lzopen_internal(const char *path, const char *mode, int fd)
     lzfile->fp = fp;
     lzfile->encoding = encoding;
     lzfile->eof = 0;
-    lzfile->strm = LZMA_STREAM_INIT_VAR;
+    lzma_stream tmp =
+#if LZMA_VERSION == 49990030
+	    LZMA_STREAM_INIT_VAR;
+#else
+	    LZMA_STREAM_INIT;
+#endif
+    lzfile->strm = tmp;
     if (encoding) {
-	lzma_options_alone alone;
+#if LZMA_VERSION == 49990030
+	lzma_options_alone options;
 /*@-unrecog@*/
-	alone.uncompressed_size = LZMA_VLI_VALUE_UNKNOWN;
+	options.uncompressed_size = LZMA_VLI_VALUE_UNKNOWN;
 /*@=unrecog@*/
-	memcpy(&alone.lzma, &lzma_preset_lzma[level - 1], sizeof(alone.lzma));
-	ret = lzma_alone_encoder(&lzfile->strm, &alone);
+	memcpy(&options.lzma, &lzma_preset_lzma[level - 1], sizeof(options.lzma));
+#else
+	lzma_options_lzma options;
+	lzma_lzma_preset(&options, level - 1);
+#endif
+	ret = lzma_alone_encoder(&lzfile->strm, &options);
     } else {
-	ret = lzma_auto_decoder(&lzfile->strm, 0, 0);
+	ret = lzma_auto_decoder(&lzfile->strm,
+#if LZMA_VERSION == 49990030
+			NULL
+#else
+			/* FIXME: second argument now sets memory limit, setting it to
+			 * '-1' means unlimited and isn't really recommended. A sane
+			 *  default value when setting it to '0' will probably be
+			 *  implemented in liblzma soon, so then we should switch
+			 *  back to '0'.
+			 */
+			-1
+#endif
+			, 0);
     }
     if (ret != LZMA_OK) {
 	(void) fclose(fp);
